新增agent_case